--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
             crossorigin="anonymous">
 
         <title>Weather Dashboard</title>
-        <link rel="stylesheet" href="assets/styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
 
-
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/d3bce829f3.js" crossorigin="anonymous"></script>
 
         <div class="container-fluid">
             <div class="card">
@@ -44,13 +46,12 @@
                                             aria-label="Recipient's username"
                                             aria-describedby="button-addon2">
                                         <div class="input-group-append">
-                                            <button class="btn
-                                                btn-outline-secondary bg-primary
-                                                searchButton" type="button"
-                                                id="button-addon2"><i class="fas
-                                                    fa-search"></i></button>
+                                            <button class="btn btn-outline-secondary bg-primary searchButton" type="button"id="button-addon2"><i class="fas fa-search"></i></button>
                                         </div>
                                     </div>
+                                    <ul class="list-group">
+
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -71,12 +72,11 @@
                 </div>
             </div>
 
-            <!-- JAVASCRIPT -->
+            
             <script src="script.js"></script>
 
             <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-            <script
-                src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         </body>
 
     </html>
