--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no">
 
-        <link rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-            crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"crossorigin="anonymous">
 
         <title>Weather Dashboard</title>
         <link rel="stylesheet" href="style.css">
@@ -20,6 +17,7 @@
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/d3bce829f3.js" crossorigin="anonymous"></script>
 
         <div class="container-fluid">
@@ -37,8 +35,7 @@
 
                             <div class="card" style="width: 18rem;">
                                 <div class="card-body bg-light">
-                                    <h6 class="card-subtitle mb-2 text-muted">Search
-                                        For A City</h6>
+                                    <h6 class="card-subtitle mb-2 text-muted">Search For A City</h6>
                                     <div class="input-group mb-3">
                                         <input type="text" class="form-control
                                             searchInput" placeholder="Enter City
